Overflow in media queries fixed

--- a/style.css
+++ b/style.css
@@ -184,6 +184,11 @@ form {
   gap: 0.5rem;
 }
 
+form .btns {
+  display: flex;
+  gap: 1rem;
+}
+
 .form-input input {
   width: 100%;
   border: 1px solid rgb(204, 201, 201);
@@ -422,6 +427,7 @@ form .advanced {
   position: relative;
   background-color: #fff;
   border-radius: 4px;
+  width: 17rem;
 }
 
 .estate_img img {
@@ -504,6 +510,7 @@ form .advanced {
   gap: 2px;
   justify-content: center;
 }
+
 .services_txt {
   margin: 0 auto;
   text-align: center;
@@ -742,9 +749,6 @@ footer {
 
 /* ----- MEDIA QUERIES  */
 @media only screen and (max-width: 800px) {
-  * {
-    overflow: hidden;
-  }
 
   .header {
     display: flex;
@@ -812,14 +816,17 @@ footer {
 
   .hamburger:has(input:checked) + nav ul {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     z-index: 2;
-    top: 4rem;
+    top: 3rem;
     background-color: #fff;
-    left: 0;
-    right: 0;
-    text-align: center;
-    padding: 0.5rem 0;
+    margin: 0 0.5rem;
+    right: 0; 
+    text-align : center;
+    padding: 0.5rem;
     transition: all 1s ease-in;
   }
 
@@ -869,19 +876,22 @@ footer {
   }
 
   .hero .bar {
-    width: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    margin: 0 10%;
+    margin-left: 30% ;
   }
 
   form {
     padding: 10px 0;
-    /* flex-direction: column; */
+    flex-direction: column;
   }
 
   form .btns {
     display: flex;
     gap: 5px;
+    padding: 0 2rem;
   }
   
   .form-input input {
@@ -922,6 +932,7 @@ footer {
     padding-top: 2rem;
     padding-left: 0.5rem;
     margin: 0 auto;
+    text-align: center;
   }
   
   .section_header p:first-of-type {
@@ -931,8 +942,6 @@ footer {
   .section_header p:last-of-type {
     font-size: 12px;
   }
-
-
 
   .perfectButtons {
     display: flex;
@@ -950,4 +959,119 @@ footer {
   .houses {
     display: grid;
   }
+  
+  .house_info {
+    margin-bottom: 1rem;
+  }
+
+  .team_imgs {
+    display: grid;
+    gap: 0.5rem;
+    margin-top: 2rem;
+    text-align: center;
+  }
+
+  .person {
+    margin-bottom: 2rem;
+  }
+
+  .NYCEstate {
+    align-items: center;
+    gap: 2rem;
+    grid-template-columns: 1fr;
+    margin: 0 10rem;
+  }
+
+  .load_btn button {
+    margin-bottom: 2rem;
+    border-radius: 3px;
+  }
+
+  .services_div {
+    display: grid;
+    gap: 2px;
+    justify-content: center;
+  }
+
+  .services_txt {
+    padding: 2rem;
+    color: #f9f9f9;
+  }
+
+  .box {
+    margin-bottom: 1rem;
+  }
+
+  .blog_pictures {
+    display: grid;
+    gap: 0.5rem;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem 0rem 0rem 0rem;
+    padding-bottom: 2rem;
+    position: relative;
+  }
+
+  .about_contact_div {
+    display: grid;
+    gap: 1rem;
+    margin: 0 1rem;
+    font-size: 12px;
+    padding: 1.5rem 0.5rem;
+  }
+
+  .discover_subsection {
+    display: flex;
+  }
+
+  .houzez {
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin: 0.5rem;
+  }
+  
+  .houzez i {
+    padding-left: 10px;
+  }
+
+  .about_site p:last-of-type {
+    width: 90%;  
+}
+
+  .discover i {
+    font-size: 10px;
+    margin-right: 4px;
+  }
+  
+  .discover .discover_subsection p{
+    margin-left: 0rem;
+    gap: 10px;
+
+  }
+  
+  .discover_subsection p:first-of-type {
+    font-size: 12px;
+  }
+  
+  .footer {
+    position: relative;
+    gap: 2rem;
+  }
+
+  .footer_details {
+    display: flex;
+    flex-direction: column
+  }
+
+  .footer_details {
+    gap: 2rem;
+    margin: 0;
+  }
+
+  #top_btn {
+    position: relative;
+    bottom: 0;
+    margin: 0;
+  }
+
 }
